add users empty authorities testing